[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-keplr-provider = { path = "../.." }


js-sys = "0.3.57"
log = "0.4.17"
serde = "1.0.136"
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.30"
wasm-logger = "0.2.0"
web-sys = "0.3.58"
web3 = { git = "https://github.com/monomadic/rust-web3", default-features = false, features = ["http-rustls-tls", "wasm", "eip-1193"] }
yew = { git = "https://github.com/yewstack/yew", features=["csr"] }
yew-hooks = { git = "https://github.com/jetli/yew-hooks" }
